fixed colors and spacing

--- a/src/components/CheckoutItems.css
+++ b/src/components/CheckoutItems.css
@@ -15,3 +15,7 @@
 .img {
   width: 20%;
 }
+
+.amount-number {
+  margin: 0 2px;
+}
